# proj-order-book

./: .gitignore  README.md  cabal.project  proj-order-book.cabal
app/: Main.hs
mock-order-book/: README.md  mock-order-book.cabal
mock-order-book/src/OrderBook/: Matching.hs  Model.hs  Utils.hs
mock-order-book/test/: Spec.hs
mock-order-book/test/Spec/: BasicOrderBookTests.hs  LargeOrderBookTests.hs
order-book-contracts/: README.md  order-book-contracts.cabal
order-book-contracts/src/: Emulator.hs  FreePolicy.hs  OffChain.hs  OnChain.hs  TradeNft.hs
order-book-contracts/src/Common/: Utils.hs
order-book-contracts/src/OrderBook/: Matching.hs  Model.hs  Utils.hs
order-book-contracts/test/: Spec.hs
order-book-contracts/test/Spec/: Trace.hs
src/OrderBook/: Matching.hs  Model.hs
test/: Spec.hs
test/Spec/: LargeOrderBookTests.hs
