cabal-version:      3.0
name:               mock-order-book
version:            0.1.0.0
stability:          experimental

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable mock-order-book
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , mock-order-book
    hs-source-dirs:
        app
    default-language: 
        Haskell2010

library 
    exposed-modules: 
        OrderBook.Model
      , OrderBook.Matching
      , OrderBook.Utils
    other-modules:
    ghc-options:
    hs-source-dirs: src 
    build-depends:
        base ^>=4.14.3.0
      , containers
      , data-default
      , lens 
      , mtl 
    default-language:
      Haskell2010

test-suite tests
    default-language:
      Haskell2010
    type:
      exitcode-stdio-1.0
    other-modules:
      Spec.LargeOrderBookTests
      Spec.BasicOrderBookTests
    hs-source-dirs:
      test
    main-is:
      Spec.hs
    build-depends:
      base ^>=4.14.3.0,
      mock-order-book,
      containers,
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      tasty-smallcheck
